# rust-kubernetes-api

./: Cargo.toml  README.md  deployment.yaml
src/: main.rs
